--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password: admin
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=validate
+
+tokenSecret = jf9i4jgu83nfl0jfu57ejf7
