--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.username: admin
 spring.datasource.password: admin
 
 spring.sql.init.mode=always
-
 spring.jpa.hibernate.ddl-auto=validate
-
 tokenSecret = jf9i4jgu83nfl0jfu57ejf7
+server.servlet.context-path=/mobile-app-ws
