--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 #url: jdbc:h2:mem:testdb
-spring.datasource.username: admin
-spring.datasource.password: admin
-spring.datasource.url: jdbc:postgresql://localhost:5432/myDB
-
-spring.sql.init.mode=always
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/myDB
 spring.jpa.hibernate.ddl-auto=validate
-
 tokenSecret = jf9i4jgu83nfl0jfu57ejf7
 server.servlet.context-path=/mobile-app-ws
+
+spring.sql.init.mode=always
